updating demo.js and index.js0

--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "dependencies": {
     "browserify": "^17.0.1",
     "budo": "^11.8.4"
+  },
+  "devDependencies": {
+    "standardx": "^7.0.0"
+  },
+  "standardx": {
+    "ignore": ["bundle.js"],
+    "rules": {
+      "camelcase": 0
+    }
   }
 }
